[package]
name = "oracle_digester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
tokio = { version = "1.23.0", features = ["full"] }
dotenv = "0.15.0"
phf = { version = "0.11", features = ["macros"] }
